--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>Smaak</title>
 </head>
 
 <body>
+  <h1>Smaak</h1>
 </body>
 
 </html>
