--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Smaak</title>
+<title>smaak.io @ github</title>
+
+<link href="https://fonts.googleapis.com/css?family=Tomorrow:300&display=swap" rel="stylesheet">
+
+<style>
+  body {
+    font-family: 'Tomorrow', sans-serif;
+  }
+  </style>
+
 </head>
 
 <body>
-  <h1>Smaak</h1>
-</body>
 
+  <header>
+  <h1>Hi 👋 <br />
+  I'm Matthew.</h1>
+  <p>I'm a UI designer and racing cyclist – working for Mergelsberg.media, Germany.</p>
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+
+</body>
 </html>
