--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>smaak.io @ github</title>
 
-<link href="https://fonts.googleapis.com/css?family=Tomorrow:300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 
 <style>
   body {
-    font-family: 'Tomorrow', sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
   }
   </style>
 
