--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>smaak.io @ github</title>
+<title>labor8.io @ github</title>
 
 <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 
@@ -17,9 +17,7 @@
 <body>
 
   <header>
-  <h1>Hi 👋 <br />
-  I'm Matthew.</h1>
-  <p>I'm a UI designer and racing cyclist – working for Mergelsberg.media, Germany.</p>
+  <h1>Hi 👋 </h1>
   </header>
 
   <main>
